{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 18,
  "lineage": "afeb0370-9d37-2087-a968-263a83a8f9e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:766446780403:loadbalancer/web-elb",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1978511018.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-0b198dda1396572f2"
            ],
            "source_security_group": "766446780403/ELB Security Group",
            "source_security_group_id": "sg-0b198dda1396572f2",
            "subnets": [
              "subnet-0e8aab55d3a3adc5a",
              "subnet-0f493b4a6047a16bd"
            ],
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.ELB_SG",
            "aws_subnet.Terraform_public_subnet01",
            "aws_subnet.Terraform_public_subnet02",
            "aws_vpc.Terra-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terraform-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:internet-gateway/igw-064abf15a1f48af7d",
            "id": "igw-064abf15a1f48af7d",
            "owner_id": "766446780403",
            "vpc_id": "vpc-0e2a8cfefe11c5fb3"
          },
          "dependencies": [
            "aws_vpc.Terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:route-table/rtb-09f07d1276f0d169b",
            "id": "rtb-09f07d1276f0d169b",
            "owner_id": "766446780403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064abf15a1f48af7d",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064abf15a1f48af7d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2a8cfefe11c5fb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terraform-IGW",
            "aws_vpc.Terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05352995838848759",
            "route_table_id": "rtb-09f07d1276f0d169b",
            "subnet_id": "subnet-0e8aab55d3a3adc5a"
          },
          "dependencies": [
            "aws_internet_gateway.Terraform-IGW",
            "aws_route_table.route",
            "aws_subnet.Terraform_public_subnet01",
            "aws_vpc.Terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f7a10786b0ff271",
            "route_table_id": "rtb-09f07d1276f0d169b",
            "subnet_id": "subnet-0f493b4a6047a16bd"
          },
          "dependencies": [
            "aws_internet_gateway.Terraform-IGW",
            "aws_route_table.route",
            "aws_subnet.Terraform_public_subnet02",
            "aws_vpc.Terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ELB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:security-group/sg-0b198dda1396572f2",
            "description": "ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b198dda1396572f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ELB Security Group",
            "name_prefix": "",
            "owner_id": "766446780403",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2a8cfefe11c5fb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terra-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_public_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:subnet/subnet-0e8aab55d3a3adc5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8aab55d3a3adc5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766446780403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-public-subnet01"
            },
            "tags_all": {
              "Name": "Terraform-public-subnet01"
            },
            "vpc_id": "vpc-0e2a8cfefe11c5fb3"
          },
          "dependencies": [
            "aws_vpc.Terra-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_public_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:subnet/subnet-0f493b4a6047a16bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f493b4a6047a16bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766446780403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-public-subnet02"
            },
            "tags_all": {
              "Name": "Terraform-public-subnet02"
            },
            "vpc_id": "vpc-0e2a8cfefe11c5fb3"
          },
          "dependencies": [
            "aws_vpc.Terra-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:vpc/vpc-0e2a8cfefe11c5fb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02fffb1f4b68f5be9",
            "default_route_table_id": "rtb-09136ba6d300e6f0d",
            "default_security_group_id": "sg-0883eee58e01a42a3",
            "dhcp_options_id": "dopt-07fd68cf2759f1387",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2a8cfefe11c5fb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09136ba6d300e6f0d",
            "owner_id": "766446780403",
            "tags": {
              "Name": "Terra-vpc"
            },
            "tags_all": {
              "Name": "Terra-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}